--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,5 @@
     <string name="search">Search</string>
     <string name="noCategories">You haven\'t created any categories yet.</string>
     <string name="openSource">Open source</string>
-    <string name="openSourceText">This app is open source. The source code is available \u003Ca href=\"https://github.com/Cameo007/Lesedatenbank-app\"\003Ehere\u003C/a\u003E.</string>
+    <string name="openSourceText">This app is open source. The source code is available \u003Ca href=\"https://github.com/Cameo007/Lesedatenbank-app\"\u003Ehere\u003C/a\u003E.</string>
 </resources>
